syntax = "proto3";

package model.model.v1alpha;

import "../../../model/model/v1alpha/model.proto";

// Model service responds to internal access
service ModelPrivateService {
  // ========== Private API ==========

  // ListModelsAdmin method receives a ListModelsAdminRequest message and
  // returns a ListModelsAdminResponse
  rpc ListModelsAdmin(ListModelsAdminRequest) returns (ListModelsAdminResponse) {}

  // LookUpModelAdmin method receives a LookUpModelAdminRequest message and
  // returns a LookUpModelAdminResponse
  rpc LookUpModelAdmin(LookUpModelAdminRequest) returns (LookUpModelAdminResponse) {}

  // DeployNamespaceModelAdmin deploy a model to online state
  rpc DeployNamespaceModelAdmin(DeployNamespaceModelAdminRequest) returns (DeployNamespaceModelAdminResponse) {}

  // DeployUserModelAdmin deploy a model to online state
  rpc DeployUserModelAdmin(DeployUserModelAdminRequest) returns (DeployUserModelAdminResponse) {}

  // DeployOrganizationModelAdmin deploy a model to online state
  rpc DeployOrganizationModelAdmin(DeployOrganizationModelAdminRequest) returns (DeployOrganizationModelAdminResponse) {}

  // UndeployUserModelAdmin undeploy a model to offline state
  rpc UndeployUserModelAdmin(UndeployUserModelAdminRequest) returns (UndeployUserModelAdminResponse) {}

  // UndeployNamespaceModelAdmin undeploy a model to offline state
  rpc UndeployNamespaceModelAdmin(UndeployNamespaceModelAdminRequest) returns (UndeployNamespaceModelAdminResponse) {}

  // UndeployOrganizationModelAdmin undeploy a model to offline state
  rpc UndeployOrganizationModelAdmin(UndeployOrganizationModelAdminRequest) returns (UndeployOrganizationModelAdminResponse) {}
}
